# api/openapi.yaml
@@ -34,7 +34,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HealthCheck'
-  /search-catalog/:
+  /local-search/:
     post:
       tags:
       - Local Search
@@ -57,13 +57,29 @@ paths:
 
 
         https://hiro-microdatacenters-bv.github.io/ds-catalog/docs/index.html#tag/Catalog/operation/get_catalog'
-      operationId: search_catalog
+      operationId: local_search
+      parameters:
+      - name: settings
+        in: query
+        required: false
+        schema:
+          default:
+            pod_namespace: default
+            service_name: search-service
+            service_port: 8000
+            catalog_service_url: http://localhost:8000
+            request_timeout: 5.0
+            discovery_type: dummy
+            dummy_search_service_urls:
+            - https://ds-search.hus.nextgen.hiro-develop.nl
+            - https://ds-search.ki.nextgen.hiro-develop.nl
+          title: Settings
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/CatalogFilters'
-        required: true
       responses:
         '200':
           description: Successful Response
@@ -75,21 +91,18 @@ paths:
                 '@context':
                   '@vocab': http://data-space.org/
                   dcat: http://www.w3.org/ns/dcat#
-                  med: http://oca.example.org/123/
+                  dcterms: http://purl.org/dc/terms/
                 '@type': Filters
                 filters:
                 - dcat:dataset:
-                    extraMetadata:
-                      '@type': med:Record
-                      med:hasAsthma: true
-                      med:hasSex: true
+                    dcterms:identifier: '123'
         '422':
           description: Validation Error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
-  /search/:
+  /distributed-search/:
     post:
       tags:
       - Decentralized Search
@@ -111,13 +124,29 @@ paths:
         for details, check ds-catalog-service documentation.
 
         https://hiro-microdatacenters-bv.github.io/ds-catalog/docs/index.html'
-      operationId: decentralized_search
+      operationId: distributed_search
+      parameters:
+      - name: settings
+        in: query
+        required: false
+        schema:
+          default:
+            pod_namespace: default
+            service_name: search-service
+            service_port: 8000
+            catalog_service_url: http://localhost:8000
+            request_timeout: 5.0
+            discovery_type: dummy
+            dummy_search_service_urls:
+            - https://ds-search.hus.nextgen.hiro-develop.nl
+            - https://ds-search.ki.nextgen.hiro-develop.nl
+          title: Settings
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/CatalogFilters'
-        required: true
       responses:
         '200':
           description: Successful Response
@@ -152,118 +181,7 @@ paths:
                   dcat:dataset:
                   - '@id': https://example.com/dataset/789
                     '@type': dcat:Dataset
-                    dcterms:identifier:
-                      '@type': xsd:string
-                      '@value': abc-123-xyz
-                    dcterms:title:
-                    - '@language': en
-                      '@value': Sample Dataset Title
-                    - '@language': es
-                      '@value': "T\xEDtulo del conjunto de datos de ejemplo"
-                    dcterms:description:
-                    - '@language': en
-                      '@value': This dataset contains sample data for testing purposes.
-                    - '@language': es
-                      '@value': Este conjunto de datos contiene datos de ejemplo para
-                        fines de prueba.
-                    dcat:keyword:
-                    - '@type': xsd:string
-                      '@value': sample
-                    - '@type': xsd:string
-                      '@value': data
-                    dcterms:license:
-                      '@type': xsd:string
-                      '@value': https://example.com/license/xyz
-                    dcat:theme:
-                    - '@id': http://eurovoc.europa.eu/100142
-                      '@type': skos:Concept
-                      skos:prefLabel:
-                        '@value': Agriculture
-                        '@language': en
-                    - '@id': http://eurovoc.europa.eu/100141
-                      '@type': skos:Concept
-                      skos:prefLabel:
-                        '@value': Health
-                        '@language': en
-                    dcat:distribution:
-                    - '@id': https://example.com/distribution/489
-                      '@type': dcat:Distribution
-                      dcterms:description:
-                        '@language': en
-                        '@value': This is a sample distribution.
-                      dcat:byteSize:
-                        '@value': 1024
-                        '@type': xsd:decimal
-                      dcat:mediaType:
-                        '@id': https://www.iana.org/assignments/media-types/application/json
-                      dcat:format:
-                        '@type': xsd:string
-                        '@value': JSON
-                      dcatap:availability:
-                      - '@id': http://data.europa.eu/r5r/AVAILABLE
-                      spdx:checksum:
-                        spdx:algorithm:
-                          '@type': xsd:string
-                          '@value': SHA-256
-                        spdx:checksumValue:
-                          '@type': xsd:string
-                          '@value': 3a7bd3e2360a3b5c1b2ef3b1a4e8f7a6
-                      dcat:accessURL:
-                        '@id': https://example.com/distribution/489/information
-                      dcat:accessService:
-                      - '@id': https://example.com/dataservice/456
-                        '@type': dcat:DataService
-                        dcterms:title:
-                          '@language': en
-                          '@value': Sample Data Service
-                        dcat:endpointURL:
-                          '@id': https://example.com/dataservice/456/download
-                    dcat:inSeries:
-                      '@id': https://example.com/series/541
-                    extraMetadata:
-                    - '@id': https://example.com/metadata/1
-                      '@type': http://med-example.org/Patient
-                      http://med-example.org/birthDate:
-                        '@type': xsd:string
-                        '@value': '1990-05-20'
-                      http://med-example.org/height:
-                        '@type': xsd:long
-                        '@value': '180'
-                      http://med-example.org/sex:
-                        '@type': xsd:string
-                        '@value': M
-                      http://med-example.org/weight:
-                        '@type': xsd:long
-                        '@value': '75'
-                    - '@id': https://example.com/metadata/2
-                      '@type': http://med-example.org/Diagnoses
-                      http://med-example.org/hasDiagnosis:
-                      - '@id': https://example.com/diagnosis/1
-                        '@type': http://med-example.org/Diagnosis
-                        http://med-example.org/code:
-                          '@type': xsd:string
-                          '@value': I10
-                        http://med-example.org/description:
-                          '@type': xsd:string
-                          '@value': Essential (primary) hypertension
-                      - '@id': https://example.com/diagnosis/2
-                        '@type': http://med-example.org/Diagnosis
-                        http://med-example.org/code:
-                          '@type': xsd:string
-                          '@value': E11
-                        http://med-example.org/description:
-                          '@type': xsd:string
-                          '@value': Type 2 diabetes mellitus
-                    dcterms:issued:
-                      '@type': xsd:string
-                      '@value': '2025-03-13'
-                    dcterms:publisher:
-                      '@id': https://example.com/person/123
-                      '@type': foaf:Agent
-                      foaf:name: John Doe
-                    isShared:
-                      '@type': xsd:boolean
-                      '@value': false
+                    any_key: any_value
                 - '@id': https://example.com/catalog/456
                   '@type': dcat:Catalog
                   dcterms:title:
@@ -279,118 +197,7 @@ paths:
                   dcat:dataset:
                   - '@id': https://example.com/dataset/789
                     '@type': dcat:Dataset
-                    dcterms:identifier:
-                      '@type': xsd:string
-                      '@value': abc-123-xyz
-                    dcterms:title:
-                    - '@language': en
-                      '@value': Sample Dataset Title
-                    - '@language': es
-                      '@value': "T\xEDtulo del conjunto de datos de ejemplo"
-                    dcterms:description:
-                    - '@language': en
-                      '@value': This dataset contains sample data for testing purposes.
-                    - '@language': es
-                      '@value': Este conjunto de datos contiene datos de ejemplo para
-                        fines de prueba.
-                    dcat:keyword:
-                    - '@type': xsd:string
-                      '@value': sample
-                    - '@type': xsd:string
-                      '@value': data
-                    dcterms:license:
-                      '@type': xsd:string
-                      '@value': https://example.com/license/xyz
-                    dcat:theme:
-                    - '@id': http://eurovoc.europa.eu/100142
-                      '@type': skos:Concept
-                      skos:prefLabel:
-                        '@value': Agriculture
-                        '@language': en
-                    - '@id': http://eurovoc.europa.eu/100141
-                      '@type': skos:Concept
-                      skos:prefLabel:
-                        '@value': Health
-                        '@language': en
-                    dcat:distribution:
-                    - '@id': https://example.com/distribution/489
-                      '@type': dcat:Distribution
-                      dcterms:description:
-                        '@language': en
-                        '@value': This is a sample distribution.
-                      dcat:byteSize:
-                        '@value': 1024
-                        '@type': xsd:decimal
-                      dcat:mediaType:
-                        '@id': https://www.iana.org/assignments/media-types/application/json
-                      dcat:format:
-                        '@type': xsd:string
-                        '@value': JSON
-                      dcatap:availability:
-                      - '@id': http://data.europa.eu/r5r/AVAILABLE
-                      spdx:checksum:
-                        spdx:algorithm:
-                          '@type': xsd:string
-                          '@value': SHA-256
-                        spdx:checksumValue:
-                          '@type': xsd:string
-                          '@value': 3a7bd3e2360a3b5c1b2ef3b1a4e8f7a6
-                      dcat:accessURL:
-                        '@id': https://example.com/distribution/489/information
-                      dcat:accessService:
-                      - '@id': https://example.com/dataservice/456
-                        '@type': dcat:DataService
-                        dcterms:title:
-                          '@language': en
-                          '@value': Sample Data Service
-                        dcat:endpointURL:
-                          '@id': https://example.com/dataservice/456/download
-                    dcat:inSeries:
-                      '@id': https://example.com/series/541
-                    extraMetadata:
-                    - '@id': https://example.com/metadata/1
-                      '@type': http://med-example.org/Patient
-                      http://med-example.org/birthDate:
-                        '@type': xsd:string
-                        '@value': '1990-05-20'
-                      http://med-example.org/height:
-                        '@type': xsd:long
-                        '@value': '180'
-                      http://med-example.org/sex:
-                        '@type': xsd:string
-                        '@value': M
-                      http://med-example.org/weight:
-                        '@type': xsd:long
-                        '@value': '75'
-                    - '@id': https://example.com/metadata/2
-                      '@type': http://med-example.org/Diagnoses
-                      http://med-example.org/hasDiagnosis:
-                      - '@id': https://example.com/diagnosis/1
-                        '@type': http://med-example.org/Diagnosis
-                        http://med-example.org/code:
-                          '@type': xsd:string
-                          '@value': I10
-                        http://med-example.org/description:
-                          '@type': xsd:string
-                          '@value': Essential (primary) hypertension
-                      - '@id': https://example.com/diagnosis/2
-                        '@type': http://med-example.org/Diagnosis
-                        http://med-example.org/code:
-                          '@type': xsd:string
-                          '@value': E11
-                        http://med-example.org/description:
-                          '@type': xsd:string
-                          '@value': Type 2 diabetes mellitus
-                    dcterms:issued:
-                      '@type': xsd:string
-                      '@value': '2025-03-13'
-                    dcterms:publisher:
-                      '@id': https://example.com/person/123
-                      '@type': foaf:Agent
-                      foaf:name: John Doe
-                    isShared:
-                      '@type': xsd:boolean
-                      '@value': false
+                    any_key: any_value
         '422':
           description: Validation Error
           content:
@@ -400,37 +207,19 @@ paths:
 components:
   schemas:
     CatalogFilters:
-      properties:
-        '@context':
-          type: object
-          title: '@Context'
-        '@type':
-          type: string
-          title: '@Type'
-        filters:
-          items:
-            type: object
-          type: array
-          title: Filters
+      properties: {}
       additionalProperties: true
       type: object
-      required:
-      - '@context'
-      - '@type'
-      - filters
       title: CatalogFilters
       examples:
       - '@context':
           '@vocab': http://data-space.org/
           dcat: http://www.w3.org/ns/dcat#
-          med: http://oca.example.org/123/
+          dcterms: http://purl.org/dc/terms/
         '@type': Filters
         filters:
         - dcat:dataset:
-            extraMetadata:
-              '@type': med:Record
-              med:hasAsthma: true
-              med:hasSex: true
+            dcterms:identifier: '123'
     HTTPValidationError:
       properties:
         detail:
@@ -451,7 +240,7 @@ components:
       required:
       - status
       title: HealthCheck
-      description: Health check response model.
+      description: Health check response model
     ValidationError:
       properties:
         loc:
